# sirsim

./: .gitignore  sirsim.R  sirstan.R
examples/sirstan/: seir-with-delays.Rmd
rust/: Cargo.toml
rust/src/: lib.rs  main.rs  sirsim.rs  sirstan.rs
rust/src/lib/: errors.rs  ibm.rs  mod.rs  spec.rs  stan.rs  util.rs
rust/tests/: seir-with-delays.json  seir-with-delays.stan  test.Rmd
