[package]
name = "sirsim"
version = "0.1.0"
authors = ["Ed Baskerville <ed@edbaskerville.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sirsim"
path = "src/lib.rs"

[[bin]]
name = "sirsim"
path = "src/main.rs"

[dependencies]
rusqlite = "0.20.0"
rand = "0.7.3"
rand_distr = "0.2.2"
rand_xoshiro = "0.4.0"

serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"

unindent = "0.1.5"
